[gd_scene load_steps=13 format=3 uid="uid://1rgwr4l47b25"]

[ext_resource type="Script" path="res://UI/Elements/HoverPopups/TextPopup/TextPopup.gd" id="1_uuyhi"]
[ext_resource type="FontFile" uid="uid://bvvb51yov72a0" path="res://Assets/fonts/Caudex-Regular.ttf" id="2_3p534"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ed83"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yco1r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64i5p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gwdyd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j8dib"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1h1yh"]
bg_color = Color(0.211765, 0.156863, 0.243137, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p666x"]
bg_color = Color(0.317647, 0.235294, 0.368627, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Animation" id="Animation_80buv"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupBackgroundPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_odk54"]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupBackgroundPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_otcrk"]
_data = {
"fade_in": SubResource("Animation_80buv"),
"fade_out": SubResource("Animation_odk54")
}

[node name="TextPopupHover" type="Button"]
z_index = 4
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_1ed83")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yco1r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_64i5p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gwdyd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_j8dib")
script = ExtResource("1_uuyhi")
display_string = "This is a test string, p;ease work"

[node name="PopupBackgroundPanel" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 365.0
offset_bottom = 46.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1h1yh")

[node name="PanelContainer" type="PanelContainer" parent="PopupBackgroundPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p666x")

[node name="InfoText" type="RichTextLabel" parent="PopupBackgroundPanel/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_3p534")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_otcrk")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
